--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -1608,50 +1608,42 @@
                         android:tag="mwar" />
 
                     <Button
-                        android:id="@+id/backBtn"
-                        android:layout_width="82px"
-                        android:layout_height="82px"
-                        android:layout_centerVertical="true"
-                        android:background="@drawable/back_btn_selector"
-                        android:tag="mwar"
-                        android:visibility="gone" />
-
-                    <ImageView
-                        android:id="@+id/jugnooLogo"
-                        android:layout_width="185px"
-                        android:layout_height="60px"
-                        android:layout_centerInParent="true"
-                        android:background="@drawable/jugnoo_text_small"
-                        android:tag="mwar" />
-
-                    <Button
                         android:id="@+id/checkServerBtn"
                         android:layout_width="82px"
                         android:layout_height="82px"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="270px"
+                        android:layout_alignParentRight="true"
                         android:background="@drawable/transparent"
                         android:longClickable="true" />
 
-                    <Button
-                        android:id="@+id/toggleDebugModeBtn"
-                        android:layout_width="82px"
-                        android:layout_height="82px"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="370px"
-                        android:background="@drawable/transparent"
-                        android:longClickable="true" />
 
-                    <TextView
-                        android:id="@+id/title"
-                        android:layout_width="540px"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
                         android:layout_centerInParent="true"
-                        android:gravity="center"
-                        android:text=" "
-                        android:textColor="@color/white"
-                        android:textSize="40px"
-                        android:visibility="gone" />
+                        android:orientation="horizontal"
+                        >
+
+                        <ImageView
+                            android:id="@+id/imageViewTitleBarDEI"
+                            android:layout_width="53px"
+                            android:layout_height="53px"
+                            android:src="@drawable/ic_dei"
+                            android:tag="mwar"
+                            android:layout_marginRight="10px"
+                            />
+
+                        <TextView
+                            android:id="@+id/textViewTitleBarDEI"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="4.5"
+                            android:textColor="@color/white"
+                            android:textSize="38px"/>
+
+                    </LinearLayout>
                 </RelativeLayout>
             </RelativeLayout>
         </RelativeLayout>
