flurryEvents: share screen hindi content

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -1834,7 +1834,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="42px"
-                        android:text="Invite &amp; Get FREE Rides"
+                        android:text="Invite &amp; Earn"
                         android:textColor="@color/white"
                         android:textSize="34px"/>
 
