--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -731,7 +731,7 @@
                 android:layout_height="match_parent"
                 android:animateLayoutChanges="true"
                 android:splitMotionEvents="false"
-                android:visibility="gone"
+                android:visibility="visible"
                 >
 
 
@@ -1345,13 +1345,83 @@
                                 </RelativeLayout>
                             </RelativeLayout>
 
+
+
+
+
+                            <RelativeLayout
+                                android:id="@+id/relativeLayoutEndRideLuggageCount"
+                                android:layout_width="648px"
+                                android:layout_height="99px"
+                                android:layout_centerHorizontal="true"
+                                android:layout_above="@+id/reviewSubmitBtn"
+                                android:layout_marginBottom="40px"
+                                android:background="@color/white_dark1"
+                                >
+
+                                <ImageView
+                                    android:layout_width="60px"
+                                    android:layout_height="51px"
+                                    android:layout_centerVertical="true"
+                                    android:layout_marginLeft="20px"
+                                    />
+
+                                <ImageView
+                                    android:layout_width="2px"
+                                    android:layout_height="match_parent"
+                                    android:layout_marginRight="212px"
+                                    android:layout_alignParentRight="true"
+                                    android:background="@color/black_translucent"
+                                    />
+
+
+                                <ImageView
+                                    android:id="@+id/imageViewEndRideLuggageCountPlus"
+                                    android:layout_width="52px"
+                                    android:layout_height="52px"
+                                    android:layout_centerVertical="true"
+                                    android:layout_marginRight="32px"
+                                    android:layout_alignParentRight="true"
+                                    android:background="@color/black_translucent"
+                                    />
+
+
+                                <ImageView
+                                    android:id="@+id/imageViewEndRideLuggageCountMinus"
+                                    android:layout_width="52px"
+                                    android:layout_height="52px"
+                                    android:layout_centerVertical="true"
+                                    android:layout_marginRight="121px"
+                                    android:layout_alignParentRight="true"
+                                    android:background="@color/black_translucent"
+                                    />
+
+
+                                <TextView
+                                    android:id="@+id/textViewEndRideLuggageCount"
+                                    android:layout_width="300px"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="100px"
+                                    android:layout_centerVertical="true"
+                                    android:textSize="40px"
+                                    android:textColor="@color/black"
+                                    android:text="NO LUGGAGE"
+                                    android:gravity="center"
+                                    />
+
+
+
+                            </RelativeLayout>
+
+
+
                             <Button
                                 android:id="@+id/reviewSubmitBtn"
                                 android:layout_width="648px"
                                 android:layout_height="99px"
                                 android:layout_alignParentBottom="true"
                                 android:layout_centerHorizontal="true"
-                                android:layout_marginBottom="350px"
+                                android:layout_marginBottom="270px"
                                 android:background="@drawable/blue_btn_selector"
                                 android:text="@string/submit"
                                 android:textColor="@drawable/white_color_selector"
@@ -1376,7 +1446,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="right"
-                                    android:visibility="gone"
+                                    android:visibility="visible"
                                     >
                                     <TextView
                                         android:id="@+id/textViewUseJugnooFare"
@@ -1384,7 +1454,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginLeft="20px"
                                         android:layout_marginRight="20px"
-                                        android:layout_marginTop="20px"
+                                        android:layout_marginTop="10px"
                                         android:gravity="center"
                                         android:text="USE JUGNOO FARE"
                                         android:textColor="@drawable/blue_btn_color_selector"
@@ -1396,7 +1466,7 @@
                                         android:layout_height="4px"
                                         android:layout_below="@+id/textViewUseJugnooFare"
                                         android:layout_centerHorizontal="true"
-                                        android:layout_marginBottom="20px"
+                                        android:layout_marginBottom="10px"
                                         android:src="@drawable/blue_btn_selector"
 
                                         />
@@ -1414,7 +1484,7 @@
                                 <RelativeLayout
                                     android:id="@+id/relativeLayoutJugnooCalculatedFare"
                                     android:layout_width="match_parent"
-                                    android:layout_height="120px"
+                                    android:layout_height="100px"
                                     android:layout_alignParentBottom="true"
                                     android:background="@color/white_translucent"
                                     android:visibility="visible"
@@ -1462,7 +1532,7 @@
                                 <RelativeLayout
                                     android:id="@+id/reviewFareInfoInnerRl"
                                     android:layout_width="match_parent"
-                                    android:layout_height="120px"
+                                    android:layout_height="100px"
                                     android:layout_alignParentBottom="true"
                                     android:background="@color/white_translucent"
                                     android:visibility="visible"
