--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/dimens.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/dimens.xml
@@ -12,5 +12,6 @@
     <dimen name="button_text_size">36px</dimen>
     <dimen name="button_small_text_size">28px</dimen>
     <dimen name="menu_width">495px</dimen>
+    <dimen name="end_ride_details_text_size">32px</dimen>
 
 </resources>
